--- a/app/css/editor_node_view.css
+++ b/app/css/editor_node_view.css
@@ -102,7 +102,7 @@
 	color: #b2b2b2;
 	border: solid 1px;
 	border-radius:1px;
-	color : #898989;
+	color : #ccc;
 	display: none;
 	
 	-moz-transform-origin: 80% 50%;
