--- a/app/css/editor_node_view.css
+++ b/app/css/editor_node_view.css
@@ -222,6 +222,16 @@
 	margin-top:5px;
 }
 
+.nodeDiv
+{
+	position:absolute;
+	left:0px;
+	top:0px;
+	right:0px;
+	bottom:0px;
+	/*overflow: auto;*/
+}
+
 
 /*
 .project_title_log {
