--- a/app/css/editor_node_view.css
+++ b/app/css/editor_node_view.css
@@ -232,6 +232,124 @@
 	/*overflow: auto;*/
 }
 
+.popup_background {
+	min-height: 100%;
+	min-width: 800px;
+	width: 100%;
+	height: auto;
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: none;
+	background-color:rgba(155,155,155,0.8);
+	visibility: visible;
+	opacity: 1;
+	z-index: 100;
+}
+
+.hostwrap {
+	text-align: center;
+	margin: 0 auto;
+	position : absolute;
+	vertical-align: middle;
+	top: 50%;
+	left : 30%;
+	z-index: 9;
+	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-o-transform: translateY(-50%);
+	width:550px;
+	min-width:550px;
+}
+
+.hostbrowser{
+	border:solid;
+	border-radius:20px;
+	border-width:12px;
+	border-color:#72ca2a;
+	background-color:#4d4d4d;
+	width:550px;
+	min-width:550px;
+	height:300px;
+	overflow:auto;
+}
+
+.hostitem{
+	border:solid;
+	border-width:2px;
+	border-radius:5px;
+	border-color:transparent;
+	height:70px;
+	padding-top:auto;
+	padding-bottom:auto;
+}
+
+.hostlabel{
+	line-height:70px;
+	text-align:left;
+	font-size:18px;
+	color:#fff;
+	vertical-align:baseline;
+	padding-left:10px;
+	float:left;
+	width:330px;
+	margin-left:10px;
+	margin-bottom:auto;
+	height:65px;
+	overflow:hidden;
+	text-overflow:ellipsis;
+	white-space:nowrap;
+}
+
+.buttons_remotehost{
+	text-align:center;
+	width:410px;
+	margin-left:400px;
+	margin-top:200px;
+}
+
+.connecttest{
+	border-radius:3px;
+	margin-top:auto;
+	margin-bottom:auto;
+	margin-right:0px;
+	width:95px;
+	height:65px;
+	z-index:100;
+	float:right;
+	background-image:url("../image/button_connect_test.png");
+}
+
+.connecttest:active{
+	background-image:url("../image/button_connect_test_press.png");
+}
+.connecttest_ok{
+	background-image:url("../image/button_connect_ok.png");
+}
+.connecttest_ok:active{
+	background-image:url("../image/button_connect_ok_press.png");
+}
+
+.connecttest_fail{
+	background-image:url("../image/button_connect_fail.png");
+}
+.connecttest_fail:active{
+	background-image:url("../image/button_connect_fail_press.png");
+}
+
+.button_open {
+	position : absolute;
+	right : 100px;
+	top : 320px;
+}
+
+.button_cancel {
+	position : absolute;
+	right : 0px;
+	top : 320px;
+}
 
 /*
 .project_title_log {
