--- a/app/css/password_input.css
+++ b/app/css/password_input.css
@@ -39,3 +39,75 @@
 	right : 0px;
 	top : 320px;
 }
+
+
+.popup_background {
+	min-height: 100%;
+	min-width: 800px;
+	width: 100%;
+	height: auto;
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: none;
+	background-color:rgba(155,155,155,0.8);
+	visibility: visible;
+	opacity: 1;
+	z-index: 100;
+}
+
+.hostwrap {
+	text-align: center;
+	margin: 0 auto;
+	position : absolute;
+	vertical-align: middle;
+	top: 50%;
+	left : 30%;
+	z-index: 9;
+	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-o-transform: translateY(-50%);
+	width:550px;
+	min-width:550px;
+}
+
+.hostbrowser{
+	border:solid;
+	border-radius:20px;
+	border-width:12px;
+	border-color:#72ca2a;
+	background-color:#4d4d4d;
+	width:550px;
+	min-width:550px;
+	height:300px;
+	overflow:auto;
+}
+
+.hostitem{
+	border:solid;
+	border-width:2px;
+	border-radius:5px;
+	border-color:transparent;
+	height:70px;
+	padding-top:auto;
+	padding-bottom:auto;
+}
+
+.hostlabel{
+	line-height:70px;
+	text-align:left;
+	font-size:18px;
+	color:#fff;
+	vertical-align:baseline;
+	padding-left:10px;
+	float:left;
+	width:330px;
+	margin-left:10px;
+	margin-bottom:auto;
+	height:65px;
+	overflow:hidden;
+	text-overflow:ellipsis;
+	white-space:nowrap;
+}
