--- a/app/css/password_input.css
+++ b/app/css/password_input.css
@@ -74,12 +74,15 @@
 }
 
 .hostbrowser{
+	margin:auto;
+	margin-left:15px;
+	margin-top:10px;
 	border:solid;
 	border-radius:20px;
 	border-width:12px;
 	border-color:#72ca2a;
 	background-color:#4d4d4d;
-	width:550px;
+	width:450px;
 	min-width:550px;
 	height:300px;
 	overflow:auto;
@@ -103,11 +106,17 @@
 	vertical-align:baseline;
 	padding-left:10px;
 	float:left;
-	width:330px;
+	width:250px;
 	margin-left:10px;
 	margin-bottom:auto;
 	height:65px;
 	overflow:hidden;
 	text-overflow:ellipsis;
 	white-space:nowrap;
+}
+
+.nodePropertyText {
+	margin-right : 10px;
+	margin-top : 15px;
+	width : 80px;
 }
