--- a/app/css/remotehost.css
+++ b/app/css/remotehost.css
@@ -216,7 +216,8 @@
 
 .pane_top_innfer {
 	float: left;
-	margin-left : 80px;
+	margin-left : 60px;
+	height : 350px;
 }
 
 .auth_area_content {
@@ -270,4 +271,9 @@
 	margin-left : 10px;
 	margin-top : 15px;
 	width : 80px;
+}
+
+.password_radio_container {
+	padding-top : 10px;
+	height : 50px;
 }
