--- a/app/css/button.css
+++ b/app/css/button.css
@@ -410,6 +410,24 @@
 	background-size: contain;
 }
 
+.button_clean {
+	width:60px;
+	height:40px;
+	position:relative;
+	top:-80px;
+	background-image:url("../image/button_bg_action_edit.png");
+	font-size:12px;
+	font-weight:600;
+	background-repeat:no-repeat;
+	background-size: contain;
+}
+
+.button_clean:active{
+	background-image:url("../image/button_bg_action_edit_press.png");
+	background-repeat:no-repeat;
+	background-size: contain;
+}
+
 /* button - edit */
 .button_edit {
 	width:60px;
