--- a/app/css/editor_node_view.css
+++ b/app/css/editor_node_view.css
@@ -334,6 +334,14 @@
 	left : 10px;
 }
 
+.node_executing {
+	color : red;
+	font-size: 20px;
+	position : relative;
+	top : 42px;
+	left : 34px;
+}
+
 /*
 .button_clean_case {
 	width:60px;
