--- a/app/css/editor_info_view.css
+++ b/app/css/editor_info_view.css
@@ -112,8 +112,8 @@ a.info_link:hover {
 .json_title {
 	display:table-cell;
 	padding-left:5px;
-	border-left: 6px solid #808080;
-	border-bottom: 1px solid #808080;
+	/*border-left: 6px solid #808080;*/
+	border-bottom: 1px solid #A0A0A0;
 	width: 40%;
 	min-width: 150px;
 }
@@ -121,8 +121,8 @@ a.info_link:hover {
 .json_text {
 	display:table-cell;
 	padding-left:5px;
-	border-left: 6px solid #FFF;
-	border-bottom: 1px solid #FFF;
+	/*border-left: 6px solid #FFF;*/
+	border-bottom: 1px solid #A0A0A0;
 	width: 60%;
 }
 
@@ -130,8 +130,25 @@ a.info_link:hover {
 	display:table-cell;
 	padding-left:5px;
 	border-left: 6px solid #808080;
-	border-bottom: 1px solid #808080;
+	border-bottom: 2px solid #808080;
+	/*
+	border-left: 6px solid #A0A0A0;
+	border-bottom: 1px solid #A0A0A0;
+	*/
 	width: 40%;
 	min-width: 150px;
-	background-color: #868686;
+	/*background-color: #A0A0A0;*/
+}
+
+.json_title_highlight {
+	display:table-cell;
+	padding-left:5px;
+	border-left: 6px solid #808080;
+	border-top: 3px solid #808080;
+	border-bottom: 3px solid #808080;
+
+	width: 40%;
+	min-width: 150px;
+	background-color: #808080;
+	color : white;
 }
