--- a/app/css/remotehost.css
+++ b/app/css/remotehost.css
@@ -1,3 +1,15 @@
+.remotehost_tab{
+	text-align:center;
+	width:800px;
+	min-width:300px;
+	margin-left:auto;
+	margin-right:auto;
+	margin-top:15px;
+	padding-top:0px;
+	background-color:transparent;
+	border:none;
+}
+
 .input_info{
 	text-align:left;
 	font-size:16px;
